unpackaged/main/default/objects/TrainingSession__c/TrainingSession__c.object-meta.xml
<CustomObject>
    <description>W-001277 : Training sessions related to quote line with training products</description>
    <label>Training Session</label>
    <nameField>
        <displayFormat>TS-{000000}</displayFormat>
        <label>Training Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>