unpackaged/main/default/objects/TrainingSession__c/fields/B2BOrder__c.field-meta.xml
<CustomField>
    <fullName>B2BOrder__c</fullName>
    <formula>Order__r.B2BOrder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B2B Order</label>
    <type>Checkbox</type>
</CustomField>