unpackaged/main/default/objects/TrainingSession__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>W-001277 Order</description>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Training Sessions</relationshipLabel>
    <relationshipName>TrainingSessions</relationshipName>
    <type>Lookup</type>
</CustomField>