unpackaged/main/default/objects/TrainingSession__c/fields/Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Training Sessions</relationshipLabel>
    <relationshipName>Training_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>