unpackaged/main/default/objects/TrainingSession__c/fields/ParticipantEmail__c.field-meta.xml
<CustomField>
    <fullName>ParticipantEmail__c</fullName>
    <description>Training participant email address</description>
    <label>Participant Email</label>
    <type>Email</type>
</CustomField>