unpackaged/main/default/objects/TrainingSession__c/fields/ParticipantFirstName__c.field-meta.xml
<CustomField>
    <fullName>ParticipantFirstName__c</fullName>
    <description>Training participant first name</description>
    <label>Participant First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>