unpackaged/main/default/objects/TrainingSession__c/fields/ParticipantLastName__c.field-meta.xml
<CustomField>
    <fullName>ParticipantLastName__c</fullName>
    <description>Training participant last name</description>
    <label>Participant Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>