unpackaged/main/default/objects/TrainingSession__c/fields/ParticipantSalutation__c.field-meta.xml
<CustomField>
    <fullName>ParticipantSalutation__c</fullName>
    <description>Participant salutation</description>
    <label>Participant Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mr</fullName>
            </value>
            <value>
                <fullName>Mrs</fullName>
            </value>
            <value>
                <fullName>Ms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>