unpackaged/main/default/objects/TrainingSession__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>W-001277 Quote</description>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Training Sessions</relationshipLabel>
    <relationshipName>Training_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>