unpackaged/main/default/objects/TrainingSession__c/fields/QuoteLine__c.field-meta.xml
<CustomField>
    <fullName>QuoteLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Master detail SBQQ__QuoteLine__c</description>
    <label>Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Training Sessions</relationshipLabel>
    <relationshipName>TrainingSessions</relationshipName>
    <type>Lookup</type>
</CustomField>