unpackaged/main/default/objects/TrainingSession__c/fields/SessionCode__c.field-meta.xml
<CustomField>
    <fullName>SessionCode__c</fullName>
    <label>Session Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>