unpackaged/main/default/objects/TrainingSession__c/fields/SessionDate__c.field-meta.xml
<CustomField>
    <fullName>SessionDate__c</fullName>
    <label>Session Date</label>
    <length>30</length>
    <type>Text</type>
</CustomField>