unpackaged/main/default/objects/TrainingSession__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>B2BOrder__c</columns>
    <columns>ParticipantFirstName__c</columns>
    <columns>ParticipantLastName__c</columns>
    <columns>ParticipantEmail__c</columns>
    <columns>Quote__c</columns>
    <columns>QuoteLine__c</columns>
    <columns>Order__c</columns>
    <columns>Order_Product__c</columns>
    <columns>SessionDate__c</columns>
    <columns>SessionCode__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>